# kmtronic_usb_relay

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint-and-test.yml
docs/: index.md  kmtronic_usb_relay.md  serial_com_utils.md
src/kmtronic_usb_relay/: com_utils.py  four_channel_relay.py  four_channel_relay_api.py  four_channel_relay_gui.py
tests/: test_my_package.py
