[project]
name = "kmtronic_usb_relay"
version = "0.1.1"
description = "Python library for KMTronic USB Relay"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9, <=3.13"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["python", "KMTronic", "USB", "relay", "app"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "pyserial",
    "customtkinter",
    "fastapi[all]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-xdist",
    "pytest-watch",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/kmtronic_usb_relay"
repository = "https://github.com/chaitu-ycr/kmtronic_usb_relay"
documentation = "https://chaitu-ycr.github.io/kmtronic_usb_relay/"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
